k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-server
  template:
    metadata:
      labels:
        app: minio-server
    spec:
      containers:
        - name: minio
          image: minio/minio
          args: ["server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-storage
              mountPath: /data
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-server
spec:
  selector:
    app: minio-server
  ports:
    - port: 9000
      targetPort: 9000
      name: api
    - port: 9001
      targetPort: 9001
      name: console
