k8s/redis_gui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  labels:
    app: redisinsight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      containers:
        - name:  redisinsight
          image: redislabs/redisinsight:1.7.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: db
              mountPath: /data
          ports:
            - containerPort: 8001
              protocol: TCP
      volumes:
        - name: db
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
spec:
  type: ClusterIP
  ports:
    - port: 8005
      targetPort: 8001
  selector:
    app: redisinsight
